[package]
name = "pso-sra-integration"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for Secp256K1-based ECDH and Poseidon5 ownership computation"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pso-protocol.workspace = true
pso-integrations-shared.workspace = true

k256.workspace = true
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
bs58.workspace = true
rand.workspace = true
thiserror.workspace = true
uniffi = { version = "0.28.0", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen-sra"
path = "src/bin/uniffi-bindgen.rs"
